# euronews-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: database.py  settings.py
src/modules/conversation/: models.py  router.py  schemas.py  service.py
src/modules/data_collector_pipeline/: composer.py  service.py
src/modules/embedder/: service.py
src/modules/inference/: models.py  router.py  schemas.py  service.py
src/modules/persistence/: contracts.py  models.py  schemas.py  service.py
src/modules/preprocessor/: composer.py  schemas.py  service.py
src/modules/scraper/: schemas.py  service.py
src/static/: index.html
src/static/css/: style.css
src/static/js/: app.js
