[tool.poetry]
name = "text-analysis"
version = "0.1.0"
description = "RAG pipeline application with streaming inference API"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
langchain-core = "^0.3"
langchain-huggingface = "^0.2"
pydantic-settings = "^2.7"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
